--- a/deployment.yml
+++ b/deployment.yml
@@ -35,5 +35,5 @@ spec:
         spec:
             containers:
                 - name: myweb
-                  image: rupali04/webserver:v1
+                  image: rupali04/webserver:latest
                  
